[1.18] Update to JEI 9.7, make compatible with JEI 10
This updates the minimum JEI version to 9.7, and updates away from using deprecated methods.
These changes maximize compatibility by allowing it to be forward-compatible with JEI version 10.